--- a/source/post/2019/1999.md
+++ b/source/post/2019/1999.md
@@ -49,6 +49,13 @@ PALM 批处理
 + INSERT(\\\(T_D\\\) , \\\((k,e)\\\)): \\\(if(k \in T_D)\\\) ，追加数据 \\\(e\\\) 到 \\\(r_k\\\) ；否则初始化 \\\(r_k\\\) 为 \\\({e}\\\) ，然后增加新的指针对 \\\(r^∗_k\\\) 到 \\\(T_D\\\)
 + DELETE(\\\(T_D\\\) , \\\((k,e)\\\)): \\\(if(k \in T_D)\\\) ，把 \\\(e\\\) 从 \\\(r_k\\\) 里移除， 然后 \\\(if(length(r_k)=0)\\\) ，从 \\\(T_D\\\) 里移除指针对 \\\(r^∗_k\\\) ， \\\(if( k \notin T_D)\\\) ，忽略操作
 
+
+B树+每次节点操作前同步actor线程
+
+$$
+L'_i = {λ \in L_i|λ \notin L_j , \forall 0 \le j < i}
+$$
+
 [1]: http://www.vldb.org/pvldb/vol4/p795-sewall.pdf "PALM: Parallel Architecture-Friendly Latch-FreeModifications to B+ Trees on Many-Core Processors"
 [2]: https://en.wikipedia.org/wiki/Knights_Ferry_(Intel) "Knights Ferry"
 [3]: https://www.sciencedirect.com/topics/mathematics/skewed-distributions "skewed distributions"
