update dep libs

--- a/source/post/2019/1999.md
+++ b/source/post/2019/1999.md
@@ -21,7 +21,7 @@ type: post
 ---
 
 前言
-================================================
+------------------------------------------------
 
 特性：
 
@@ -39,8 +39,10 @@ type: post
 
 Bulk Synchronous Parallel (BSP) 。
 
+简单的理解，PALM就是普通B+树然后在某些阶段执行同步操作，收敛工作线程来解决并发执行时传统方案的锁的问题。
+
 PALM 批处理
-================================================
+------------------------------------------------
 
 假设有数据库 \\\(D\\\) , 然后里面有全量的Key索引 \\\(K\\\) ， 然后索引对 \\\((k,r^∗_k)\\\) 。 \\\(r^∗_k\\\) 是指向实际数据集\\\(r_k\\\) 。
 然后对于数据库 \\\(D\\\) 的树形结构索引 \\\(T_D\\\) [**PALM树**][1] 支持三种操作:
@@ -52,9 +54,18 @@ PALM 批处理
 
 B树+每次节点操作前同步actor线程
 
+### REDISTRIBUTE-WORK
+
 $$
 L'_i = {λ \in L_i|λ \notin L_j , \forall 0 \le j < i}
 $$
+
+### RESOLVE-HAZARDS
+
+节点内处理 MODIFY-NODE
+------------------------------------------------
+
+
 
 [1]: http://www.vldb.org/pvldb/vol4/p795-sewall.pdf "PALM: Parallel Architecture-Friendly Latch-FreeModifications to B+ Trees on Many-Core Processors"
 [2]: https://en.wikipedia.org/wiki/Knights_Ferry_(Intel) "Knights Ferry"
