add formular for reading PALM

--- a/source/post/2019/1999.md
+++ b/source/post/2019/1999.md
@@ -52,6 +52,28 @@ PALM 批处理
 + DELETE(\\\(T_D\\\) , \\\((k,e)\\\)): \\\(if(k \in T_D)\\\) ，把 \\\(e\\\) 从 \\\(r_k\\\) 里移除， 然后 \\\(if(length(r_k)=0)\\\) ，从 \\\(T_D\\\) 里移除指针对 \\\(r^∗_k\\\) ， \\\(if( k \notin T_D)\\\) ，忽略操作
 
 
+```
+PALM(O, T[D], i, t)
+  // O are queries, T[D] is the tree 
+  // i is the thread-id, and t is the number of threads
+  O[i] = PARTITION-INPUT (O, i, t)
+  L[i] = SEARCH (O[i], T[D])
+  SYNC(i, t)
+  L'[i] = REDISTRIBUTE-WORK (L[0], . . . , L[t−1], i)
+  (R[i], O'[L'[i]]) = RESOLVE-HAZARDS(L'[i] , O, D)
+  for (O[λ], λ) in (O'[L'[i]], L'[i])
+    M[1][i] = M[1][i] ∪ MODIFY-NODE (O[λ], λ)
+  SYNC(i, t)
+  for d = 1 to depth (TD) − 1
+    M[d'][i] = REDISTRIBUTE-WORK(M[d][0], ..., M[d][t−1], i)
+    for (Λ, η) in M[d'][i]
+      M[d+1][i] = M[d+1][i] ∪ MODIFY-NODE (Λ, η)
+    SYNC(i, t)
+  if (i == 0)
+    HANDLE-ROOT(\bigcup(M[d+1][i]), T[D])
+  return (R0, ..., Rt−1)
+```
+
 B树+每次节点操作前同步actor线程
 
 ### REDISTRIBUTE-WORK
@@ -65,7 +87,28 @@ $$
 节点内处理 MODIFY-NODE
 ------------------------------------------------
 
-
+```
+MODIFY-NODE (Λ, η)
+  // Λ is sequence of modifications to node η.
+  // If η is internal, Λ is a modification list.
+  // If η is a leaf, Λ is a series of INSERT and DELETE queries.
+  E = items (η)
+  K = ∅
+  for m in Λ
+    K = K ∪ orphaned-keys (m)
+    if class (m) == "+"
+      E = E ∪ items (m)
+    elseif class (m) == "−"
+      E = E \ items (m)
+  if |E| > MAX-DEGREE
+    (η, η', η'', ...) = BIG-SPLIT(E)
+    return {"+", parent (η) , η', η'', ..., K}
+  elseif |E| < MIN-DEGREE
+    return {"−", parent (η) , η, K ∪ descendant-keys (E)}
+  else
+    child-ranges (η) = E
+    return {∅, K}
+```
 
 [1]: http://www.vldb.org/pvldb/vol4/p795-sewall.pdf "PALM: Parallel Architecture-Friendly Latch-FreeModifications to B+ Trees on Many-Core Processors"
 [2]: https://en.wikipedia.org/wiki/Knights_Ferry_(Intel) "Knights Ferry"
