精简C++20 Coroutine压力测试的代码

--- a/source/post/2019/1911.md
+++ b/source/post/2019/1911.md
@@ -20,6 +20,7 @@ tags:
   - libc++
   - libcxxabi
   - libc++abi
+  - libcopp
 title: C++20 Coroutine 性能测试
 type: post
 ---
@@ -34,7 +35,7 @@ type: post
 测试代码
 ------------------------------------------------
 
-[C++20 Coroutine][7] 上手比较麻烦，所以测试代码那是真滴长。
+[C++20 Coroutine][7] 上手比较麻烦，所以测试代码那是真滴长。 ```co_await``` 的原理和 ```co_yield``` 是一样的，只是 ```co_await``` 多了一点点对封装类似 [libcotask][1] 的支持，单纯的上下文切换仅使用 ```co_yield``` 就可以了。这样也更能公平地拿来和其他几个协程库对比。
 
 ```cpp
 #include <iostream>
@@ -46,131 +47,126 @@ type: post
 #include <experimental/coroutine>
 
 static std::vector<std::pair<int*, std::experimental::coroutine_handle<> > > g_test_rpc_manager;
-static int g_test_rpc_fake_data = 0;
 
-struct test_rpc_generator {
-    struct test_rpc_data {
-        int final_value;
-        int yield_times;
-
-        std::vector<std::experimental::coroutine_handle<> > follower;
-    };
-
-    struct promise_type;
-    using data_ptr = std::shared_ptr<test_rpc_data>;
+struct test_custom_coroutine_data;
+struct test_custom_coroutine {
+    using data_ptr = std::unique_ptr<test_custom_coroutine_data>;
 
     struct promise_type {
-        data_ptr data;
-        static auto get_return_object_on_allocation_failure() {
-            return test_rpc_generator{ nullptr };
-        }
+        test_custom_coroutine_data* refer_data;
+        promise_type();
 
-        auto get_return_object() {
-            data = std::make_shared<test_rpc_data>();
-            if (data) {
-                data->final_value = 0;
-                data->yield_times = 0;
-            }
-            return test_rpc_generator{ data };
-        }
+        static test_custom_coroutine get_return_object_on_allocation_failure();
 
-        auto initial_suspend() {
-            return std::experimental::suspend_never{}; // STL提供了一些自带的awaiter实现，我们其实很多情况下也不需要另外写，直接用STL就好了
-        }
+        test_custom_coroutine get_return_object();
 
-        auto final_suspend() {
-            return std::experimental::suspend_always{}; // 和上面一样，也是STL自带的awaiter实现
-        }
+        std::experimental::suspend_never initial_suspend();
 
-        void unhandled_exception() {
-            std::terminate();
-        }
+        std::experimental::suspend_always final_suspend();
+
+        void unhandled_exception();
 
         // 用以支持 co_return
-        void return_value(int v) {
-            // 最终co_return时保存最终数据
-            if (data) {
-                data->final_value = v;
-
-                auto followers = std::move(data->follower);
-                for (auto& h : followers) {
-                    h.resume();
-                }
-            }
-        }
+        void return_void();
 
         // 用以支持 co_yield
-        auto yield_value(int* value) {
-            // 每次调用都会执行,创建handle用以后面恢复数据
-            g_test_rpc_manager.emplace_back(std::make_pair(value, std::experimental::coroutine_handle<>::from_address(
-                std::experimental::coroutine_handle<promise_type>::from_promise(*this).address()
-            )));
-
-            if (data) {
-                ++data->yield_times;
-            }
-
-            return std::experimental::suspend_always{};
-        }
+        std::experimental::suspend_always yield_value(test_custom_coroutine_data*&);
     };
 
     // 下面的接入用侵入式的方式支持 co_await test_rpc_generator
     // MSVC 目前支持使用非侵入式的方式实现，但是clang不支持
-    bool await_ready() noexcept {
-        return value() > 0;
-    }
+    bool await_ready() noexcept;
 
-    void await_resume() {
-        std::cout << std::setw(32) << __FUNCTION__ << std::setw(3) << ": " << __LINE__ << ": test_rpc_generator resume for " << yield_times() << " time(s)" << std::endl;
-    }
+    void await_resume();
 
-    void await_suspend(std::experimental::coroutine_handle<> h) {
-        std::cout << std::setw(32) << __FUNCTION__ << std::setw(3) << ": " << __LINE__ << ": test_rpc_generator yield for " << yield_times() << " time(s), wait for " << h.address() << std::endl;
+    void await_suspend(std::experimental::coroutine_handle<promise_type>);
 
-        // 记录要恢复父协程
-        if (h) {
-            add_follower(h);
-        }
-    }
-
-    int value() const {
-        if (data) {
-            return data->final_value;
-        }
-        return 0;
-    }
-
-    int yield_times() const {
-        if (data) {
-            return data->yield_times;
-        }
-
-        return -1;
-    }
-
-    void add_follower(std::experimental::coroutine_handle<> h) {
-        if (data) {
-            data->follower.emplace_back(std::move(h));
-        }
-    }
 private:
-    test_rpc_generator(data_ptr d) : data(d) {}
+    test_custom_coroutine(data_ptr &&);
     data_ptr data;
 };
 
+struct test_custom_coroutine_data {
+    int sum_times;
+    int yield_times;
+
+    std::experimental::coroutine_handle<test_custom_coroutine::promise_type> handle;
+};
+
+test_custom_coroutine::promise_type::promise_type(): refer_data(nullptr) {}
+test_custom_coroutine test_custom_coroutine::promise_type::get_return_object_on_allocation_failure() {
+    return test_custom_coroutine{ nullptr };
+}
+
+test_custom_coroutine test_custom_coroutine::promise_type::get_return_object() {
+    data_ptr data = std::make_unique<test_custom_coroutine_data>();
+    if (data) {
+        data->sum_times = 0;
+        data->yield_times = 0;
+        refer_data = data.get();
+    }
+    return test_custom_coroutine{ std::move(data) };
+}
+
+std::experimental::suspend_never test_custom_coroutine::promise_type::initial_suspend() {
+    return std::experimental::suspend_never{}; // STL提供了一些自带的awaiter实现，我们其实很多情况下也不需要另外写，直接用STL就好了
+}
+
+std::experimental::suspend_always test_custom_coroutine::promise_type::final_suspend() {
+    return std::experimental::suspend_always{}; // 和上面一样，也是STL自带的awaiter实现
+}
+
+void test_custom_coroutine::promise_type::unhandled_exception() {
+    std::terminate();
+}
+
+// 用以支持 co_return
+void test_custom_coroutine::promise_type::return_void() {}
+
+// 用以支持 co_yield
+std::experimental::suspend_always test_custom_coroutine::promise_type::yield_value(test_custom_coroutine_data*& coro_data) {
+    // 每次调用都会执行,创建handle用以后面恢复数据
+    if(nullptr != refer_data) {
+        refer_data->handle = std::experimental::coroutine_handle<promise_type>::from_promise(*this);
+        ++ refer_data->yield_times;
+    }
+
+    coro_data = refer_data;
+    return std::experimental::suspend_always{};
+}
+
+// 下面的接入用侵入式的方式支持 co_await test_custom_coroutine , 实际上benchmark过程中并没有用到
+// MSVC 目前支持使用非侵入式的方式实现，但是clang不支持
+bool test_custom_coroutine::await_ready() noexcept {
+    // 准备好地标志是协程handle执行完毕了
+    return !data || !data->handle || data->handle.done();
+}
+
+void test_custom_coroutine::await_resume() {
+    // do nothing when benchmark
+}
+
+void test_custom_coroutine::await_suspend(std::experimental::coroutine_handle<promise_type>) {
+    // do nothing when benchmark
+    // 被外部模块 co_await , 这里完整的协程任务链流程应该是要把coroutine_handle记录到test_custom_coroutine
+    // 在return_void后需要对这些coroutine_handle做resume操作，但是这里为了减少benchmark的额外开销和保持干净
+    // 所以留空
+}
+
+test_custom_coroutine::test_custom_coroutine(data_ptr && d) : data(std::move(d)) {}
+
 // 异步协程函数
-test_rpc_generator f() {
-    int rpc_res1, rpc_res2;
-    co_yield &rpc_res1;
-    // _alloca(rpc_res1);
-    std::cout << "resumed got rpc_res1: " << rpc_res1 << "(@" << &rpc_res1 << ")" << std::endl;
+test_custom_coroutine coroutine_start_main() {
+    test_custom_coroutine_data* coro_data;
+    // create done and first yield
+    co_yield coro_data;
+    
+    while (coro_data != nullptr && coro_data->yield_times < coro_data->sum_times) {
+        co_yield coro_data;
+    }
 
-    co_yield &rpc_res2;
-    // _alloca(rpc_res2);
-    std::cout << "resumed got rpc_res1: " << rpc_res1 << "(@" << &rpc_res1 << ")" << ", rpc_res2: " << rpc_res2 << "(@" << &rpc_res2 << ")" << std::endl;
-
-    // 模拟多次RPC然后返回最终结果
-    co_return rpc_res1 * 100 + rpc_res2;
+    // finish all yield
+    co_return;
 }
 
 // 这里模拟生成数据
@@ -186,138 +182,6 @@ void test_rpc_manager_run() {
         if (generator.second && !generator.second.done()) {
             generator.second.resume();
         }
-    }
-}
-
-struct test_task {
-    using ptr_t = std::shared_ptr<test_task>;
-
-    test_task(int ms) : status(0), max_status(ms) {}
-
-    bool is_ready() const noexcept {
-        return status >= max_status;
-    }
-
-    int status;
-    int max_status;
-};
-
-struct test_task_future {
-    struct promise_type;
-    using ptr_t = std::shared_ptr<test_task>;
-    using handle = std::experimental::coroutine_handle<promise_type>;
-
-    struct promise_type {
-        static auto get_return_object_on_allocation_failure() {
-            return test_task_future{ nullptr };
-        }
-
-        auto get_return_object() {
-            return test_task_future{ handle::from_promise(*this) };
-        }
-
-        auto initial_suspend() {
-            return std::experimental::suspend_never{};
-        }
-
-        auto final_suspend() {
-            return std::experimental::suspend_always{};
-        }
-
-        void unhandled_exception() {
-            std::terminate();
-        }
-
-        void return_void() {
-            for (auto& h : follower) {
-                h.resume();
-            }
-        }
-
-        // 这里是为了把task::ptr_t数据关联进去，目前版本不支持promise构造函数参数，没想到什么其他好方法
-        auto yield_value(ptr_t t) {
-            task = t;
-            return std::experimental::suspend_never{};
-        }
-
-        ptr_t task;
-        std::vector<handle> follower;
-    };
-
-    // 下面的接入用侵入式的方式支持 co_await test_task::ptr_t
-    struct awaitable {
-        awaitable(const test_task_future& pt) {
-            if (pt.coro) {
-                data = pt.coro.promise().task;
-                coro = pt.coro;
-            }
-        };
-
-        bool await_ready() const {
-            bool ret = !data || data->is_ready();
-            if (ret) {
-                std::cout << std::setw(32) << __FUNCTION__ << std::setw(3) << ": " << __LINE__ << ": task " << data.get() << " ready" << std::endl;
-            }
-
-            return ret;
-        }
-
-        void await_resume() {
-            if (data) {
-                ++data->status;
-                std::cout << std::setw(32) << __FUNCTION__ << std::setw(3) << ": " << __LINE__ << ": task " << data.get() << " resume to " << (data ? data->status : -1) << std::endl;
-            }
-        }
-
-        void await_suspend(handle h) {
-            if (data) {
-                std::cout << std::setw(32) << __FUNCTION__ << std::setw(3) << ": " << __LINE__ << ": task " << data.get() << " suspend test_task_future::handle from " << (data ? data->status : -1) <<
-                    ", wait for " << h.address() << std::endl;
-
-            }
-
-            if (coro && h) {
-                coro.promise().follower.emplace_back(h);
-            }
-        }
-
-        ptr_t data;
-        handle coro;
-    };
-
-    bool done() const {
-        return !coro || coro.done();
-    }
-
-private:
-    test_task_future(handle h) : coro(h) {}
-    handle coro;
-};
-
-// 接入 co_await test_task::ptr_t
-auto operator co_await(const test_task_future & pt) noexcept {
-    return test_task_future::awaitable{ pt };
-}
-
-test_task_future h(test_task::ptr_t task) {
-    // 这里是为了把task::ptr_t数据关联进去，目前版本不支持promise构造函数参数，没想到什么其他好方法
-    co_yield task;
-
-    // 模拟任务内部流程并调用外部RPC
-    std::cout << std::setw(32) << __FUNCTION__ << std::setw(3) << ": " << __LINE__ << ": task " << task.get() << std::endl;
-    test_rpc_generator rpc_res = f();
-    co_await rpc_res;
-    std::cout << std::setw(32) << __FUNCTION__ << std::setw(3) << ": " << __LINE__ << ": task " << task.get() << " call f() ret: " << rpc_res.value() << std::endl;
-}
-
-test_task_future g(test_task::ptr_t task) {
-    // 这里是为了把task::ptr_t数据关联进去，目前版本不支持promise构造函数参数，没想到什么其他好方法
-    co_yield task;
-
-    // 等待子任务完成
-    while (task && !task->is_ready()) {
-        std::cout << std::setw(32) << __FUNCTION__ << std::setw(3) << ": " << __LINE__ << ": task " << task.get() << std::endl;
-        co_await h(task);
     }
 }
 
