--- a/source/post/2019/1911.md
+++ b/source/post/2019/1911.md
@@ -37,14 +37,29 @@ type: post
 
 [C++20 Coroutine][7] 上手比较麻烦，所以测试代码那是真滴长。 ```co_await``` 的原理和 ```co_yield``` 是一样的，只是 ```co_await``` 多了一点点对封装类似 [libcotask][1] 的支持，单纯的上下文切换仅使用 ```co_yield``` 就可以了。这样也更能公平地拿来和其他几个协程库对比。
 
-```cpp
-#include <iostream>
-#include <iomanip>
-#include <vector>
+Clang编译命令: ```$LLVM_CLANG_PREFIX/bin/clang++ -std=c++2a -O0 -g -ggdb -stdlib=libc++ -fcoroutines-ts -lc++ -lc++abi -Wl,-rpath=$LLVM_CLANG_PREFIX/lib/ test.cpp```
 
+MSVC编译命令: ```cl /nologo /O2 /Og /std:c++latest /Zi /MDd /Zc:__cplusplus /EHsc /await test.cpp```
+
+```cpp
+#include <cstdio>
+#include <cstdlib>
+#include <cstring>
+#include <ctime>
+#include <inttypes.h>
+#include <stdint.h>
+#include <vector>
 #include <memory>
+#include <iostream>
 
 #include <experimental/coroutine>
+
+#include <chrono>
+#define CALC_CLOCK_T std::chrono::system_clock::time_point
+#define CALC_CLOCK_NOW() std::chrono::system_clock::now()
+#define CALC_MS_CLOCK(x) static_cast<int>(std::chrono::duration_cast<std::chrono::milliseconds>(x).count())
+#define CALC_NS_AVG_CLOCK(x, y) static_cast<long long>(std::chrono::duration_cast<std::chrono::nanoseconds>(x).count() / (y ? y : 1))
+
 
 static std::vector<std::pair<int*, std::experimental::coroutine_handle<> > > g_test_rpc_manager;
 
@@ -81,6 +96,9 @@ struct test_custom_coroutine {
 
     void await_suspend(std::experimental::coroutine_handle<promise_type>);
 
+    int resume();
+    void set_sum_times(int);
+    bool is_done() const;
 private:
     test_custom_coroutine(data_ptr &&);
     data_ptr data;
@@ -121,7 +139,11 @@ void test_custom_coroutine::promise_type::unhandled_exception() {
 }
 
 // 用以支持 co_return
-void test_custom_coroutine::promise_type::return_void() {}
+void test_custom_coroutine::promise_type::return_void() {
+    if(nullptr != refer_data) {
+        refer_data->handle = nullptr;
+    }
+}
 
 // 用以支持 co_yield
 std::experimental::suspend_always test_custom_coroutine::promise_type::yield_value(test_custom_coroutine_data*& coro_data) {
@@ -153,6 +175,25 @@ void test_custom_coroutine::await_suspend(std::experimental::coroutine_handle<pr
     // 所以留空
 }
 
+int test_custom_coroutine::resume() {
+    if (!await_ready()) {
+        data->handle.resume();
+        return 1;
+    }
+
+    return 0;
+}
+
+void test_custom_coroutine::set_sum_times(int times) {
+    if (data) {
+        data->sum_times = times;
+    }
+}
+
+bool test_custom_coroutine::is_done() const {
+    return !(data && data->handle);
+}
+
 test_custom_coroutine::test_custom_coroutine(data_ptr && d) : data(std::move(d)) {}
 
 // 异步协程函数
@@ -170,40 +211,91 @@ test_custom_coroutine coroutine_start_main() {
 }
 
 // 这里模拟生成数据
-void test_rpc_manager_run() {
-    std::vector<std::pair<int*, std::experimental::coroutine_handle<> > > rpc_manager;
-    g_test_rpc_manager.swap(rpc_manager);
-
-    for (auto& generator : rpc_manager) {
-        if (generator.first) {
-            *generator.first = ++g_test_rpc_fake_data;
-        }
-
-        if (generator.second && !generator.second.done()) {
-            generator.second.resume();
+bool coroutine_resume(std::vector<test_custom_coroutine>& in, long long& real_switch_times) {
+    bool ret = false;
+    for (auto& co : in) {
+        real_switch_times += co.resume();
+        if (!co.is_done()) {
+            ret = true;
         }
     }
+
+    return ret;
 }
 
-int main(int argc, char* argv[]) {
+int main(int argc, char *argv[]) {
 #ifdef __cpp_coroutines
     std::cout << "__cpp_coroutines: " << __cpp_coroutines << std::endl;
 #endif
-
-    // 创建一个任务
-    test_task::ptr_t task = std::make_shared<test_task>(3);
-    // 运行任务
-    auto fut = g(task);
-    // 模拟从外部获取数据然会恢复协程
-    while (!fut.done()) {
-        test_rpc_manager_run();
+    puts("###################### C++20 coroutine ###################");
+    printf("########## Cmd:");
+    for (int i = 0; i < argc; ++i) {
+        printf(" %s", argv[i]);
     }
+    puts("");
+
+    int switch_count = 100;
+    int max_coroutine_number = 100000; // 协程数量
+
+    if (argc > 1) {
+        max_coroutine_number = atoi(argv[1]);
+    }
+
+    if (argc > 2) {
+        switch_count = atoi(argv[2]);
+    }
+
+    std::vector<test_custom_coroutine> co_arr;
+    co_arr.reserve(static_cast<size_t>(max_coroutine_number + 1));
+
+    time_t       begin_time  = time(NULL);
+    CALC_CLOCK_T begin_clock = CALC_CLOCK_NOW();
+
+    // create coroutines
+    for (int i = 0; i < max_coroutine_number; ++ i)  {
+        co_arr.emplace_back(coroutine_start_main());
+        co_arr.back().set_sum_times(switch_count);
+    }
+
+    time_t       end_time  = time(NULL);
+    CALC_CLOCK_T end_clock = CALC_CLOCK_NOW();
+    printf("create %d coroutine, cost time: %d s, clock time: %d ms, avg: %lld ns\n", max_coroutine_number,
+           static_cast<int>(end_time - begin_time), CALC_MS_CLOCK(end_clock - begin_clock),
+           CALC_NS_AVG_CLOCK(end_clock - begin_clock, max_coroutine_number));
+
+    begin_time  = end_time;
+    begin_clock = end_clock;
+
+    // yield & resume from runner
+    long long real_switch_times = static_cast<long long>(0);
+
+    bool is_continue = true;
+    while (is_continue) {
+        is_continue = coroutine_resume(co_arr, real_switch_times);
+    }
+
+    end_time  = time(NULL);
+    end_clock = CALC_CLOCK_NOW();
+    printf("switch %d coroutine contest %lld times, cost time: %d s, clock time: %d ms, avg: %lld ns\n", max_coroutine_number,
+           real_switch_times, static_cast<int>(end_time - begin_time), CALC_MS_CLOCK(end_clock - begin_clock),
+           CALC_NS_AVG_CLOCK(end_clock - begin_clock, real_switch_times));
+
+    begin_time  = end_time;
+    begin_clock = end_clock;
+
+    co_arr.clear();
+
+    end_time  = time(NULL);
+    end_clock = CALC_CLOCK_NOW();
+    printf("remove %d coroutine, cost time: %d s, clock time: %d ms, avg: %lld ns\n", max_coroutine_number,
+           static_cast<int>(end_time - begin_time), CALC_MS_CLOCK(end_clock - begin_clock),
+           CALC_NS_AVG_CLOCK(end_clock - begin_clock, max_coroutine_number));
 
     return 0;
 }
 ```
 
-测试结果和总结
+测试结果
 ------------------------------------------------
 
 [1]: https://github.com/owt5008137/libcopp
